--- a/src/components/video_item.jsx/video_item.module.css
+++ b/src/components/video_item.jsx/video_item.module.css
@@ -8,19 +8,12 @@
   border-radius: 10px;
   padding: 10px;
   box-shadow: 5px 5px 20px 2px rgba(0, 0, 0, 0.3);
-}
-
-@keyframes cardHover {
-  0% {
-    transform: scale(1, 1);
-  }
-  100% {
-    transform: scale(1.02, 1.02);
-  }
+  cursor: pointer;
+  transition: transform 0.2s ease-in;
 }
 
 .card:hover {
-  animation: 0.5s cardHover forwards;
+  transform: scale(1.02, 1.02);
 }
 
 .thumbnails {
