--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,10 +1,3 @@
-.main {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.content {
-  display: flex;
+.app {
+  max-width: 80rem;
 }
